--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <div id="grid-container">
         <div id="header">header</div>
         <div id="main">
-            <img id="img1" src="./assets/santorini.jpg">
-            <img id="img2" src="./assets/akrotiri-redbeach.jpg">
-            <img id="img3" src="./assets/akrotiri-lighthouse.jpg">
+            <img id="img1" src="santorini.jpg">
+            <img id="img2" src="akrotiri-redbeach.jpg">
+            <img id="img3" src="akrotiri-lighthouse.jpg">
 
         </div>
         <div id="footer">
-            <div><img id="logo" src="./assets/logo.avif" alt="logo"> </div>
+            <div><img id="logo" src="logo.avif" alt="logo"> </div>
             <div></div>
             <div></div>
         </div>
